fixed spelling error

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
  <div class="aboutContent">
    
    <div id="meetTheCreator"> <h2>Let Us Introduce Ourselves...</h2>
-    <p>Associated Personnel is a Staffing Service specializing in placements on the business side of the Automotive Industry. We have been specializing in the industry for over 30 years with a great relationship with Established Dealers as well as New Owners to the Southern California Area. We would love to assist in your search for the most qualified candidates for the positions of General Manager, Controller, Business Manager, Office Manager, DMV, Contracts, Accounts Payable/Receivable, Inventory, Dealer Trades, Reptionist, and Cashier.</p>
+    <p>Associated Personnel is a Staffing Service specializing in placements on the business side of the Automotive Industry. We have been specializing in the industry for over 30 years with a great relationship with Established Dealers as well as New Owners to the Southern California Area. We would love to assist in your search for the most qualified candidates for the positions of General Manager, Controller, Business Manager, Office Manager, DMV, Contracts, Accounts Payable/Receivable, Inventory, Dealer Trades, Receptionist, and Cashier.</p>
 <img id="cars" src="assets/carro.png" alt="car graphic">
  </div>
 
