changes garrie name

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
   </nav>
 
     <h1>Professional Placement</h1>
-    <p id="belowneedhelp">Geraldine Sears-Trinh
+    <p id="belowneedhelp">Gerrie Sears-Trinh
 </p>
 
 <h2>
